kubernetes/cert-manager/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  labels:
    app: http-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /testing
          pathType: Prefix
          backend:
            service: 
              name: http-svc
              port: 
                number: 80
